2021-08-18  Megan Gardner  <megan_gardner@apple.com>

        Remove unneeded UIKitSPI declarations
        https://bugs.webkit.org/show_bug.cgi?id=210075

        Reviewed by Wenson Hsieh.

        Remove unneeded feature define.

        * wtf/PlatformHave.h:

2021-08-18  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        [GStreamer][EME] Try to parse XML init datas that could possibly come from MPD manifests
        https://bugs.webkit.org/show_bug.cgi?id=229145

        Reviewed by Alicia Boya Garcia.

        * wtf/glib/GUniquePtr.h: Added deleter for GMarkupParseContext.

2021-08-16  Alex Christensen  <achristensen@webkit.org>

        Enable PerformanceNavigationAPI by default
        https://bugs.webkit.org/show_bug.cgi?id=227336

        Reviewed by Chris Dumez.

        It passes WPT tests except the following:

        navigation-timing/nav2_test_redirect_chain_xserver_partial_opt_in.html and navigation-timing/nav2_test_redirect_xserver.html pass when run from wpt.live,
        and other browsers also don't pass when run from our local hosting infrastructure, which doesn't have a good cross-domain redirect.

        nav2_test_attributes_values.html fails in Chrome and Firefox.  There's something wrong with the port detection in the test.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2021-08-16  Ryosuke Niwa  <rniwa@webkit.org>

        Add thread safe version of CanMakeCheckedPtr
        https://bugs.webkit.org/show_bug.cgi?id=229018

        Reviewed by Geoffrey Garen.

        Introduce CanMakeThreadSafeCheckedPtr which is a thread safe version of CanMakeCheckedPtr.

        * wtf/CheckedRef.h:
        (WTF::CanMakeCheckedPtrBase): Extracted from CanMakeCheckedPtr.
        (WTF::CanMakeCheckedPtrBase::~CanMakeCheckedPtrBase):
        (WTF::CanMakeCheckedPtrBase::ptrCount const):
        (WTF::SingleThreadIntegralWrapper): Added.
        (WTF::SingleThreadIntegralWrapper::SingleThreadIntegralWrapper):